Fix File Manager back button, play button alignment, and TorBox/AllDebrid streaming

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -2336,13 +2336,16 @@ h1, h2, h3 {
     z-index: 6;
     cursor: pointer;
     padding: 0;
+    margin: 0;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .poster-play::before {
     content: '▶';
     font-size: 1rem;
     color: #fff;
-    text-indent: 2px;
+    padding-left: 3px;
     display: block;
     line-height: 1;
 }
